// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config (v2) works correctly [client] 1`] = `
"
const rootPath = \\"test\\"

export default rootPath
"
`;

exports[`base config (v2) works correctly [server] 1`] = `
"
const rootPath = \\"test\\"

export default rootPath
"
`;

exports[`base config works correctly [client] 1`] = `
"
const rootPath = \\"\\"

export default rootPath
"
`;

exports[`base config works correctly [server] 1`] = `
"
const rootPath = \\"\\"

export default rootPath
"
`;
